# fault_converters

./: .gitignore  PINN verificacion.py  PINN_prueba.py  PINN_prueba_dos.py  README.md  auto buck cruzado multicore.py  autoencoder_cout.py  autoencoder_cruzado_Cout_EsrC.py  autoencoder_cruzado_Cout_Rds1.py  autoencoder_cruzado_Cout_Rds2.py  autoencoder_cruzado_Cout_Rout.py  autoencoder_esr_C.py  autoencoder_esr_L.py  autoencoder_lout.py  autoencoder_rds_1.py  autoencoder_rds_2.py  buck_auto_cruzado.py  crear imagenes.py  entrenamiento pinn.py  main.py  mover_a_entrenamiento.py  pinn simplificado entrenamiento.py  probar_modelo.py  probar_modelo_cruzado.py  prueba de conceptos.py  pyproject.toml
data/: generate_data.py  setup_and_generate.bat
data/buck/: buck(AC-Sweep).fra  buck.psimsch  component_ranges.json  parameters.txt
docs/: CALL_FOR_PAPERS.docx  CALL_FOR_PAPERS.md  CALL_FOR_PAPERS.tex  CONVERTER_PARAMETERS.md  FUTURE_RESEARCH.md  JSC_PAPER_DRAFT.md  PRESENTATION.md  REFERENCES.md  TECHNICAL_DOCUMENTATION.md
docs/presentations/: 14-01-26 DETECCIÓN DE ANOMALÍAS EN CONVERTIDORES DE POTENCIA.pptx  CMMSE_2026_presentation.html  CMMSE_2026_presentation_standalone.html  ~$20-04-26 DETECCIÓN DE ANOMALÍAS EN CONVERTIDORES DE POTENCIA.pptx
experiments/carla/: metrics.json  search_results.json
experiments/conv1d_ae/: metrics.json  model_config.json
experiments/gru_ae/: metrics.json  threshold.json
experiments/lstm_ae/: metrics.json  model_config.json  threshold.json
experiments/mlp_ae/: metrics.json  model_config.json  threshold.json
notebooks/: explore_deployment.ipynb  explore_results.ipynb
papers/: PLAN.md
papers/jsc_edge_deployment/: main.tex
scripts/: build_standalone_deck.py  deploy_all.bat  deploy_all.sh  evaluate_all.sh  evaluate_inference.sh  generate_arch_diagrams.py  generate_deck_svgs.py  generate_synthetic_buck.py  optimize.sh  train_all.sh
src/: __init__.py  deploy.py  deployment_evaluation.py  deployment_optimization.py  evaluate.py  train.py
tests/: README.md  conftest.py
visualizer/: index.html  package-lock.json  package.json  vite.config.ts
(+634 files in other folders)
