[project]
name = "fault-converters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorflow[and-cuda]>=2.21.0",
    "tqdm>=4.67.3",
    "onnx>=1.16.0",
    "tf2onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "psutil>=5.9.0",
    "tensorrt-cu12>=11.1.0.106",
    "pytest>=9.1.1",
    "cuda-python>=13.3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

