[project]
name = "fault-converters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "keras-tuner>=1.4.8",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "onnx>=1.16.0",
    "tf2onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "psutil>=5.9.0",
    "pytest>=9.1.1",
    "onnxconverter-common>=1.16.0",
    # TensorFlow: CUDA build on Linux for training/eval on GPU, plain build on macOS (CPU/Metal).
    "tensorflow[and-cuda]>=2.21.0 ; sys_platform == 'linux'",
    "tensorflow>=2.21.0 ; sys_platform == 'darwin'",
    # GPU deployment stack (TensorRT / CUDA) is Linux-only and has no macOS wheels.
    "tensorrt-cu12>=11.1.0.106 ; sys_platform == 'linux'",
    "cuda-python>=13.3.1 ; sys_platform == 'linux'",
]

# NVIDIA index provides real Linux wheels for the TensorRT stub packages so uv can
# resolve/lock them from macOS (they still only install on Linux via the markers above).
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"

[tool.pytest.ini_options]
pythonpath = ["."]

